create dummy cache action

--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -13,10 +13,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Demo
-        uses: ./.github/actions/with-post-steps
-        with:
-          main: echo "At main step"
-          post: echo "At post step"
+        uses: ./.github/actions/cache
 
       - name: Echo
         run: echo "Hello world"
