--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Demo
+      - name: Cache
         uses: ./.github/actions/cache
 
       - name: Echo
